<resources>
    <string name="app_name">IntoxicMate</string>

    <string name="google_maps_key">AIzaSyDYq7rnJ4DIoLIuLbHuH4bJOLf1UCaMSuk</string>

    <string name="welcome">Welcome to IntoxicMate</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="tolerance">Tolerance</string>
    <string name="home">Home Location</string>
    <string name="contacts">Emergency Contacts</string>
    <string name="uber">Getting Home</string>
    <string name="finish">Thanks!</string>

    <string name="warning_open">Are You Okay?</string>
    <string name="warning_actions">How do you want to get Home?</string>
    <string name="warning_finish">Get home safe!</string>

    <string name="welcome_description">Our goal is to help you stay safe by helping you get home, and letting your friends or family know if you are in trouble</string>
    <string name="age_description">Please enter your age to help us decide when you may be inebriated</string>
    <string name="gender_description">Please enter your gender to help us decide when you may be inebriated</string>
    <string name="tolerance_description">Please enter your alcohol tolerance to help us decide when you may be inebriated</string>
    <string name="home_description">This is where we try to bring you back to</string>
    <string name="contacts_description">In case of emergency we will contact these people</string>
    <string name="uber_description">Default way to get home</string>
    <string name="finish_description">Your information has been set, if something changes just open the app to modify your settings</string>

    <string name="open_description">If you need help, we will try to get you home safe</string>
    <string name="action_description">If you don\'t want to leave quite yet you can always come back to this screen</string>
    <string name="finish_warning_description">If you need more help, swipe back to use the other help options</string>

    <string name="intro_warning_empty_age">Age has not been selected</string>
    <string name="intro_warning_empty_gender">Gender has not been selected</string>
    <string name="intro_warning_empty_tolerance">Tolerance has not been selected</string>
    <string name="intro_warning_empty_home">Home location has not been selected</string>
    <string name="intro_warning_empty_contact">Primary emergency contact has not been selected</string>
    <string name="intro_warning_empty_uber">Travel options have not been selected</string>

    <string name="open_option_1">Yep, I\'m fine</string>
    <string name="open_option_2">Drank a little</string>
    <string name="open_option_3">Not really</string>

    <string name="age_option_1">Less than 25</string>
    <string name="age_option_2">25-40</string>
    <string name="age_option_3">40-60</string>
    <string name="age_option_4">60+</string>

    <string name="action_option_1">Call Uber</string>
    <string name="action_option_2">Transit Home</string>
    <string name="action_option_3">Walk Home</string>
    <string name="action_option_4">Call a Friend</string>

    <string name="gender_option_1">Male</string>
    <string name="gender_option_2">Female</string>

    <string name="home_option_1">Use current location</string>
    <string name="home_option_2">Choose on map</string>

    <string name="tolerance_option_1">Low</string>
    <string name="tolerance_option_2">Medium</string>
    <string name="tolerance_option_3">High</string>

    <string name="contact_option_1">Emergency Contact #1</string>
    <string name="contact_option_2">Emergency Contact #2</string>
    <string name="contact_option_3">Emergency Contact #3</string>

    <string name="travel_option_1">Ride with Uber</string>
    <string name="travel_option_2">Transit directions</string>
    <string name="travel_option_3">Call a friend</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="send_settings_error">An error occurred, please try again</string>

    <string name="demo_list_header_text">\nCongratulations! you have successfully authenticated and your token is: %s\n\nTest the following functions of the api!\n</string>
    <string name="products">Products!</string>
    <string name="time_estimates">Time Estimates!</string>
    <string name="price_estimates">Price Estimates!</string>
    <string name="history_v1">History! (v1)</string>
    <string name="history_v1_1">History! (v1.1)</string>
    <string name="me">Me!</string>
    <string name="endpoint_list_header_text">Welcome to the %s endpoint!</string>
    <string name="endpoint_list_result_text">Here is the result of a call to %s:</string>
</resources>
